debug modal in listeActu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
@@ -2,10 +2,10 @@
     <div class="container-fluid footer">
         <div class="row">
             <div class="col-xs-4">
-                <!-- Button modal Crédits -->
-                <a class="lienFooter" href="#myModal2" data-toggle="modal" data-target="#myModal2">Crédits</a><br/>
-                <!-- Modal Crédits-->
-                <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <!-- Button modal Crédit -->
+                <a class="lienFooter" href="#myModal1" data-toggle="modal" data-target="#myModal1">Crédits</a><br/>
+                <!-- Modal Crédit-->
+                <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -33,10 +33,11 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Button modal Mentions légales-->
-                <a class="lienFooter" href="#myModal3" data-toggle="modal" data-target="#myModal3">Mentions légales</a>
+                <a class="lienFooter" href="#myModal" data-toggle="modal" data-target="#myModal">Mentions légales</a>
                 <!-- Modal Mentions Légales-->
-                <div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
