--- a/m-tourisme/app/Resources/views/actu/edit.html.twig
+++ b/m-tourisme/app/Resources/views/actu/edit.html.twig
@@ -23,7 +23,7 @@
     {% endblock %}
             <div class="container">
                 <div class="row edit">
-                    <h1>Editer une Actualité</h1>
+                    <h1 class="edit_actu_title">Editer une Actualité</h1>
 
                         {{ form_start(edit_form) }}
                             {{ form_row(edit_form.titre, { 'attr': {'class': 'form-control input-lg'}}) }}<br/>
