--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -19,7 +19,7 @@
     {% endblock %}
     {% block content %}
 
-    <h1>Actualité</h1>
+    <h1 class="show_actu_title">Actualité</h1>
 
         <table>
             <tbody>
