--- a/m-tourisme/web/css/styleEdit.css
+++ b/m-tourisme/web/css/styleEdit.css
@@ -1,7 +1,9 @@
-h1 {
+.edit_actu_title {
     text-align: center;
     font-family: 'santorregular', 'DIN-Bold', 'Courgette';
     font-size: 3.5em;
+    border: 2px solid rgba(255, 255, 255, 0);
+
 }
 
 .edit {
