--- a/m-tourisme/app/Resources/views/actu/show.html.twig
+++ b/m-tourisme/app/Resources/views/actu/show.html.twig
@@ -18,9 +18,11 @@
         {{  include('headerAdmin.html.twig') }}
     {% endblock %}
     {% block content %}
-
-    <h1>Actualité</h1>
-
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Actualité</h1>
+        </div>
+    </div>
         <table>
             <tbody>
                 <tr>
