--- a/m-tourisme/app/Resources/views/actu/index.html.twig
+++ b/m-tourisme/app/Resources/views/actu/index.html.twig
@@ -16,10 +16,12 @@
         {{  include('headerAdmin.html.twig') }}
     {% endblock %}
 {% block content %}
-
-    <h1>Liste des Actualités</h1>
-
-
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>Liste des Actualités</h1>
+        </div>
+    </div>
+    <br/>
     <table>
         <thead>
             <tr>
