--- a/m-tourisme/app/Resources/views/actu/new.html.twig
+++ b/m-tourisme/app/Resources/views/actu/new.html.twig
@@ -23,10 +23,12 @@
         {{  include('headerAdmin.html.twig') }}
     {% endblock %}
     <div class="container new">
-
-
-            <h1>Création d'une actualité</h1>
-
+        <div class="row">
+            <div class="col-xs-12">
+                <h1>Création d'une actualité</h1>
+            </div>
+        </div>
+        <br/>
                 {{ form_start(form) }}
 
                     {{ form_row(form.titre, { 'attr': {'class': 'form-control input-lg'}}) }}<br/>
