--- a/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
@@ -9,20 +9,22 @@
             <div class="row">
 
                 <!-- Map -->
-                <iframe class="map" width="625" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=1.8892514705657961%2C47.89133419118289%2C1.8968582153320315%2C47.8957799548847&amp;layer=mapnik&amp;marker=47.893557120745015%2C1.8930602073669434"></iframe><br/>
-                <small><a  class="legendecarte" target="_blank" href="http://www.openstreetmap.org/?mlat=47.89356&amp;mlon=1.89306#map=17/47.89356/1.89305">Ouvrir la carte dans un nouvel onglet</a></small><br>
+                <iframe class="map hidden-xs" width="625" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=1.8892514705657961%2C47.89133419118289%2C1.8968582153320315%2C47.8957799548847&amp;layer=mapnik&amp;marker=47.893557120745015%2C1.8930602073669434"></iframe><br/>
+                <small><a  class="legendecarte hidden-xs hidden-sm" target="_blank" href="http://www.openstreetmap.org/?mlat=47.89356&amp;mlon=1.89306#map=17/47.89356/1.89305">Ouvrir la carte dans un nouvel onglet</a></small><br>
 
                 <!-- Adresse MTL -->
                 <div class="col-lg-offset-1 col-lg-7">
-                    <p class="adresse">
+                    <p class="adresse hidden-xs">
                         m-Tourisme-Ludique est au Lab'O<br/>
                         1 Avenue du champs de Mars, Orléans<br/>
                     </p>
+                        <a class="linkAdresse hidden-lg hidden-md hidden-sm" href="http://www.openstreetmap.org/?mlat=47.89356&amp;mlon=1.89306#map=17/47.89356/1.89305">m-Tourisme-Ludique est au Lab'O<br/>
+                        1 Avenue du champs de Mars, Orléans<br/></a>
                 </div>
 
                 <!-- Logo Lab'O  -->
                 <div class="col-lg-4 col-xs-12">
-                    <a href="http://www.le-lab-o.fr/" target="_blank"><img src="{{ asset ('image/labO_logo_vect2.png')}}" class="img-responsive logolabo" alt="logo Le Lab'O"></a>
+                    <a href="http://www.le-lab-o.fr/" target="_blank"><img src="{{ asset ('image/labO_logo_vect2.png')}}" class="img-responsive center-block logolabo" alt="logo Le Lab'O"></a>
                 </div>
 
             </div>
