update font-size & add txt 3points in sm

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
@@ -37,15 +37,13 @@
                     </div>
 
                     <!-- Texte -->
-                    <div class="hidden-xs
-                        hidden-sm
-                        col-md-7
+                    <div class="col-md-7
                         col-md-offset-5
                         col-lg-7
                         col-lg-offset-5 text_trois_points">
                         <p class="txtPoint">
-                            Par l'expérience proposée et le choix de technologies adaptées, nous sollicitons la
-                            curiosité des publics visés.
+                            Par l'expérience proposée et le choix de <strong class="motAccroche">technologies adaptées</strong>, nous sollicitons la
+                            <strong class="motAccroche">curiosité</strong> des publics visés.
                         </p>
                     </div>
                 </div>
@@ -89,14 +87,12 @@
                     </div> <!--- espace --->
 
                     <!--- texte --->
-                    <div class="hidden-xs
-                        hidden-sm
-                        col-md-7
+                    <div class="col-md-7
                         col-md-offset-3
                         col-lg-7
                         col-lg-offset-3 text_trois_points">
                         <p class="txtPoint">
-                            Par une stratégie de médiation pertinente  et l'apport d'experts des patrimoines concernés,
+                            Par une stratégie de <strong class="motAccroche">médiation</strong> pertinente  et l'apport d'<strong class="motAccroche">experts des patrimoines</strong> concernés,
                             nous favorisons l'assimilation "sans douleur" des conventions régissant les thèmes choisis.
                         </p>
                         <div class="hidden-xs hidden-sm col-md-2 col-lg-2"></div>
@@ -119,8 +115,7 @@
                         <img class="img-responsive img_trois_points" src="{{ asset ('image/icone_photo.png')}}"
                              alt="" width="180px" height="230px">
                     </div>
-                    <div class="hidden-xs
-                        hidden-sm
+                    <div class="
                         col-md-7
                         col-lg-7 text_trois_points">
                         <p class="txtPoint">
