--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid " id="ancreProduit" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
     <div class="row">
         <div class="col-lg-12">
-            <h2 class="titreGeo">GéoMOTifs</h2>
+            <h2>GéoMOTifs</h2>
         </div>
     </div>
 </div>
@@ -97,7 +97,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <a href="https://www.facebook.com/geomotifs" target="_blank"><p class="txtFB">Et devenez accros aux motifs en contribuant sur notre page Facebook</p></a>
+            <a href="https://www.facebook.com/geomotifs" target="_blank"><p class="txtFB">Et devenez accros aux détails et contribuant sur notre page Facebook</p></a>
         </div>
     </div>
     <div class="row">
