--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -97,7 +97,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
-            <a href="https://www.facebook.com/geomotifs" target="_blank"><p class="txtFB">Et devenez accros aux détails et contribuant sur notre page Facebook</p></a>
+            <a href="https://www.facebook.com/geomotifs" target="_blank"><p class="txtFB">Et devenez accros aux détails et contribuant sur notre page <span class="facebook">Facebook</span></p></a>
         </div>
     </div>
     <div class="row">
