--- a/m-tourisme/app/Resources/views/base.html.twig
+++ b/m-tourisme/app/Resources/views/base.html.twig
@@ -15,6 +15,19 @@ architecture, geomotifs, details, geocaching">
         <!-- FavIcon -->
     <link rel="icon" type="image/png" href="{{ asset('image/favicon.png')}}" />
 
+
+        <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-86749722-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+
     {% block stylesheets %}
 
         <!-- Bootstrap -->
