--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -3,7 +3,7 @@
     {{ form_start(form, {'method' : 'POST'})}}
 
         <div class="col-lg-5 col-md-12 col-sm-12 col-xs-12 total_form">
-            <h3 class="accrocheForm">Un projet, une idée? Contactez-nous :</h3></br>
+            <h3 class="accrocheForm">Contactez-nous :</h3></br>
 
             <div class="form-group">
         {{ form_errors(form.nom) }}
