--- a/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
@@ -1,7 +1,7 @@
     <div class="container-fluid notre_philo" id="ancreMetier">
         <!----- titre + text ----->
         <div class="row">
-            <h2 class="titreMetier">Prendre plaisir à s'enrichir</h2>
+            <h2>Prendre plaisir à s'enrichir</h2>
             <p class="txt-presentation">
                 m-Tourisme Ludique édite des <strong class="noBold">solutions numériques</strong> dédiées à la <strong class="accrocheMetier">valorisation ludique et pédagogique de patrimoines matériels et immatériels.</strong>
             </p>
