--- a/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/actu.html.twig
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
-            <h2 id="ancreActu" class="titreActu">Actualités</h2>
+            <h2 id="ancreActu">Actualités</h2>
         </div>
 
         {#<!-- lien vers la iste des actus -->#}
