--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
@@ -22,7 +22,7 @@
                                 <h3 class="titreMention">Icônes et pictogrammes</h3>
                                 <p class="pMention">
                                     Les icônes et pictogrammes utilisés sur le site sont libres de droits et
-                                    issus du site <a href="www.icons8.com">www.icons8.com</a>
+                                    issus du site <a href="http://www.icons8.com" target="_blank">www.icons8.com</a>
                                 </p>
                                 <hr class="separe">
 
@@ -73,11 +73,11 @@
                                 <h3 class="titreMention">Réalisation du site web</h3>
                                 <p class="pMention">
                                     <span class="ecole">Wild Code school</span><br/>
-                                    <a class="linkML" href="https://fr.linkedin.com/in/louise-munier-6057b057">Louise Munier</a><br/>
-                                    <a class="linkML" href="https://fr.linkedin.com/in/guillaume-landreau-96520978">Guillaume Landreau</a><br/>
-                                    <a class="linkML" href="https://fr.linkedin.com/in/mathieu-mercier">Mathieu Mercier</a><br/><br/>
+                                    <a class="linkML" href="https://fr.linkedin.com/in/louise-munier-6057b057" target="_blank">Louise Munier</a><br/>
+                                    <a class="linkML" href="https://fr.linkedin.com/in/guillaume-landreau-96520978" target="_blank">Guillaume Landreau</a><br/>
+                                    <a class="linkML" href="https://fr.linkedin.com/in/mathieu-mercier" target="_blank">Mathieu Mercier</a><br/><br/>
                                     contact@wildcodeschool.fr<br/>
-                                    <a class="linkML" href="http://www.wildcodeschool.fr/">www.wildcodeschool.fr</a>
+                                    <a class="linkML" href="http://www.wildcodeschool.fr/" target="_blank">www.wildcodeschool.fr</a>
                                 </p>
                             </div>
                             <div class="modal-footer">
