--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -92,6 +92,11 @@ embed-responsive {
 }
 
 
+.fb-page{
+    margin-top: 7%;
+    margin-bottom: 7%;
+}
+
 .facebook {
     color: blue;
     font-style: italic;
