test resolving pb logout & login

--- a/m-tourisme/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/m-tourisme/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -12,7 +12,7 @@
 
         <div class="col-xs-12">
             <h1 class="title_login titleMTL">m-Tourisme Ludique</h1>
-            <h2 class="title_login">Connexion à l'espace d'administration</h2>
+            <h2 class="title_login title_connexion">Connexion à l'espace d'administration</h2>
 
             <div class="col-xs-6 col-xs-offset-3 form_login">
                 <form action="{{ path("fos_user_security_check") }}" method="post">
