--- a/m-tourisme/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/m-tourisme/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -45,15 +45,13 @@
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
-                <button type="button" class="btn btn-default btn_login" aria-label="login">
                     <a href="{{ path('fos_user_security_logout') }}" class="link_login">
                         {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                     </a>
-                </button>
+
             {% else %}
-                <button type="button" class="btn btn-default btn_login" aria-label="login">
-                    <a href="{{ path('fos_user_security_login') }}" class="link_login">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-                </button>
+                    <a href="{{ path('fos_user_security_login') }}" class="link_login">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}
+                    </a>
             {% endif %}
         </div>
 
@@ -68,7 +66,57 @@
         {% endif %}
 
             {% block fos_user_content %}
-                 
+                <link rel="stylesheet" type="text/css" href="{{ asset('css/stylesheetLogin.css')}}">
+
+
+                <div class="container block_login">
+                    <div class="row login_page">
+
+                        {% trans_default_domain 'FOSUserBundle' %}
+
+                        {% if error %}
+                            <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
+
+                        <div class="col-xs-12">
+                            <h1 class="title_login titleMTL">m-Tourisme Ludique</h1>
+                            <h2 class="title_login title_connexion">Connexion à l'espace d'administration</h2>
+
+                            <div class="col-xs-6 col-xs-offset-3 form_login">
+                                <form action="{{ path("fos_user_security_check") }}" method="post">
+                                    {% if csrf_token %}
+                                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                                    {% endif %}
+
+                                    <div class="login_champs">
+                                        <label for="username">{{ 'security.login.username'|trans }}</label>
+                                        <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
+                                        <br>
+                                    </div>
+
+                                    <div class="login_champs">
+                                        <label for="password">{{ 'security.login.password'|trans }}</label>
+                                        <input type="password" id="password" name="_password" required="required" />
+                                        <br>
+                                    </div>
+
+                                    <div class="login_champs">
+                                        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                                        <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                                    </div>
+
+                                    <div class="login_champs login_submit">
+                                        <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" class="input_submit" />
+                                    </div>
+
+                                </form>
+                            </div>
+
+
+                        </div>
+
+                    </div>
+                </div>
             {% endblock fos_user_content %}
 
     </body>
