--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -97,14 +97,12 @@
                     détails<br/> en contribuant sur notre page <span class="facebook">Facebook</span></p></a>
         </div>
 
-        <div class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-lg-4 col-md-4 col-sm-4 hidden-xs">
+        <div class="col-lg-6 col-md-6 col-sm-6 hidden-xs">
             <div class="fb-page" data-href="https://www.facebook.com/geomotifs" data-tabs="timeline,events,messages"
-                 data-width="500" data-height="500" data-small-header="true" data-adapt-container-width="true"
+                 data-width="400" data-height="500" data-small-header="true" data-adapt-container-width="true"
                  data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook
                  .com/geomotifs" class="fb-xfbml-parse-ignore "><a href="https://www.facebook.com/geomotifs">Géomotifs</a></blockquote>
             </div>
-        </div>
-        <div class="col-lg-offset-4 col-md-offset-4 col-sm-offset-4">
         </div>
     </div>
     <hr class="separe">
@@ -113,45 +111,47 @@
 <!-- Section remerciement -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2 col-lg-3 col-md-3 col-sm-3 col-xs-3">
+        <div class=" col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 center-block">
                     <p class="remerciement">Inspiré de:</p>
                 </div>
             </div>    
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 center-block">
                     <a href="http://www.eyrolles.com/Loisirs/Livre/vocabulaire-illustre-de-l-ornement-9782212128598" target="_blank">
-                        <img src="{{ asset('image/produit-vocabulaire.jpg') }}" class="img-responsive" alt="livre vocabulaire illustré de l'Ornement"></a>
+                        <img src="{{ asset('image/produit-vocabulaire.jpg') }}" class="img-responsive sponsors"
+                             alt="livre vocabulaire illustré de l'Ornement"></a>
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 center-block">
                     <p class="remerciement">Une application réalisée par:</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 center-block">
                     <a href="http://www.museographie.mazedia.fr/" target="_blank">
-                        <img src="{{ asset('image/produit-mazedia-V2.png') }}" class="img-responsive" alt="Agence Mazedia"></a>
+                        <img src="{{ asset('image/produit-mazedia-V2.png') }}" class="img-responsive sponsors" alt="Agence
+                        Mazedia"></a>
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 center-block">
                     <p class="remerciement">Avec le soutien de:</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xs-12">
+            <div class="row center-block">
+                <div class="col-xs-12 center-block">
                     <a href="http://www.regioncentre-valdeloire.fr/accueil.html" target="_blank">
-                        <img src="{{ asset('image/Region-Centre-Val-de-Loire-2015.png') }}" class="img-responsive" alt="Région centre Val de Loire"></a>
+                        <img src="{{ asset('image/Region-Centre-Val-de-Loire-2015.png') }}" class="img-responsive sponsors"
+                             alt="Région centre Val de Loire"></a>
                 </div>
             </div>
         </div>
-        <div class="col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-offset-1"></div>
     </div>
 </div>
