--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -23,7 +23,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-offset-1 col-md-offset-1 col-lg-5 col-md-5 col-sm-12 col-xs-12">
+        <div class="col-lg-offset-1 col-md-offset-1 col-lg-5 col-md-5 col-sm-offset-1 col-xs-offset-1 col-sm-11
+        col-xs-11">
             <h3 class="titreProduit">Développez un nouveau thème de visite</h3><br/>
             <p class="txtGeo">
                 Territoire, Ville, monument, lieu de visite...
