--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -32,8 +32,12 @@
 
                             {# <h2 class="titreActu">Actualité n° {{ actu.id }}</h2> #}
                             <p class="contenu">{{ actu.contenu | raw}}</p><br/>
-                            <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive
-                            img-actu"><br/>
+                        <a class="lightbox" href="#goofy"><img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive
+                            img-actu"></a><br/>
+                        <div class="lightbox-target" id="goofy">
+                            <img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive img-actu">
+                            <a class="lightbox-close" href="#"></a>
+                        </div>
                             <p class="date">Le  {{ actu.date | date("d-m-Y") }}</p><br/>
 
                     </div>
