Added 5% margin-bottom in section image 2

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -113,7 +113,7 @@
                     </a>
                 </li>
 
-                <!--- Bouton Likedin --->
+                <!--- Bouton Linkedin --->
                 <li class="bouton_IN img_hover">
                     <a href="https://www.linkedin.com/in/sylvain-lambert-38387757" target="_blank">
                         <img alt="Profil Sylvain Lambert" src=" {{ asset('image/logo_linkedin_transp.png') }}"/>
@@ -132,7 +132,7 @@
             </ul>
         </div>
 
-        <!-- code pour faire apparaître le bouton dès que l'on scroll -->
+        <!-- code pour faire apparaître le bouton au scroll -->
         <script>
             $(document).ready(function(){
                 // Condition d'affichage du bouton
