--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -120,7 +120,7 @@
             </div>    
             <div class="row">
                 <div class="col-xs-12 center-block">
-                    <a href="http://www.eyrolles.com/Loisirs/Livre/vocabulaire-illustre-de-l-ornement-9782212128598" target="_blank">
+                    <a href="http://www.eyrolles.com/Loisirs/Livre/vocabulaire-illustre-de-l-ornement-par-le-decor-de-l-architecture-et-des-autres-arts-9782212142228" target="_blank">
                         <img src="{{ asset('image/produit-vocabulaire.jpg') }}" class="img-responsive sponsors"
                              alt="livre vocabulaire illustré de l'Ornement"></a>
                 </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 center-block">
-                    <a href="http://www.museographie.mazedia.fr/" target="_blank">
+                    <a href="https://www.mazedia.fr/" target="_blank">
                         <img src="{{ asset('image/produit-mazedia-V2.png') }}" class="img-responsive sponsors" alt="Agence
                         Mazedia"></a>
                 </div>
