changed text in Produits

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/produits.html.twig
@@ -27,18 +27,18 @@
         col-xs-11">
             <h3 class="titreProduit">Développez un nouveau thème de visite</h3><br/>
             <p class="txtGeo">
-                Territoire, Ville, monument, lieu de visite...
+                Territoire, ville, monument, lieu de visite...
             </p>
             <p class="txtGeo">
                 <span class="geomotifs">GéoMOTifs</span> a vocation à développer un nouvel axe de valorisation du
                 patrimoine par les <strong class="motAccroche">détails</strong>
                 (<strong class="motAccroche">ornementation, architecture</strong>...).
-                Ils sont omniprésents, on ne les voit pas, mais sans eux notre patrimoine aurait moins de saveurs.
+                Ils sont omniprésents, on n'y prête pas attention, mais sans eux notre patrimoine aurait moins de saveurs.
             </p>
             <p class="txtGeo">
                 Vous disposez d'un <strong class="motAccroche">patrimoine</strong> éligible et souhaitez renouveler l'intérêt pour votre
                 destination ? Attirer de nouveaux publics ?
-                Développer la notoriété grâce à une matière visuelle par essence ?
+                Développer notre notoriété grâce à une matière visuelle par essence ?
             </p>
             <p class="txtGeo">
                 Adhérez à <span class="geomotifs">GéoMOTifs !</span> l'offre <strong class="motAccroche">ludique</strong>
