--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage.html.twig
@@ -12,7 +12,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <p class="textImage">Prenez le temps de lever la tête</p>
+                <p class="textImage">Prenez le temps de lever la tête !</p>
             </div>
         </div>
         <div class="row">
