--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
@@ -96,6 +96,7 @@
             </div>
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                 <p>Réalisé par :<br/></p>
+                <img class="logo_wild" src="{{ asset('image/logo_blanc_pastille.png') }}"><br>
                 <a class="lienFooter" href="http://www.wildcodeschool.fr/" target="_blank">Wild Code School</a>
             </div>
         </div>
