--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
@@ -1,10 +1,10 @@
 <footer id="background">
     <div class="container-fluid footer">
         <div class="row">
-            <div class="col-xs-4">
-                <!-- Button modal Crédit -->
+            <div class="col-xs-4 block_foot">
+                <!-- Button modal Crédits -->
                 <a class="lienFooter" href="#myModal1" data-toggle="modal" data-target="#myModal1">Crédits</a><br/>
-                <!-- Modal Crédit-->
+                <!-- Modal Crédits-->
                 <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -92,6 +92,7 @@
 
             <div class=" col-xs-4 col-xs-offset-2">
                 <p>Réalisé par :<br/></p>
+                <img class="logo_wild2" src="{{ asset('image/logo_blanc_pastille.png') }}"><br>
                 <a class="lienFooter" href="http://www.wildcodeschool.fr/" target="_blank">Wild Code School</a>
             </div>
         </div>
