--- a/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/email.html.twig
@@ -35,9 +35,9 @@
             </div>
 
             <p class="texte_require">* Champs obligatoires</p>
-
-            <button type="submit" name="validation" class="btn btn-warning catForm form-submit">Envoyer</button>
-
+            <div class="col-lg-12">
+                <button type="submit" name="validation" class="btn btn-warning catForm form-submit">Envoyer</button>
+            </div>
         </div>
     {{ form_end(form) }}
 
