--- a/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/formulaire.html.twig
@@ -1,9 +1,13 @@
 <div class="sectionForm" id="ancreForm">
-    <div class="row">
-        {#<div class="col-lg-1 hidden-xs hidden-sm hidden-md titreContact">#}
-            {#<h1>Contactez-nous</h1>#}
-        {#</div>#}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>Contactez-nous</h2>
+            </div>
+        </div>
+    </div>
 
+    <div class="row">
         <!-- partie gauche -->
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 leftSide">
             <div class="row">
