--- a/m-tourisme/web/css/stylesheetForm.css
+++ b/m-tourisme/web/css/stylesheetForm.css
@@ -93,31 +93,13 @@
 .form-submit {
     box-shadow: 2px 2px 5px dimgrey;
     position: relative;
-    left:40%;
     margin-top: 10%;
 }
 
-.titreForm {
-    font-weight: bold;
-    text-align: center;
-    font-family: 'DIN';
-}
-
-/* titre H3 du formulaire */
-.accrocheForm {
-    font-weight: bold;
-    text-align: center;
-    padding-top: 5%;
-    font-family: 'santorregular','DIN';
-    font-size: 220%;
-    width:200%;
-    color: #EE6616;
-}
-
 .btn{
-    margin-left: 40%;
     background-color: #EE6616;
     font-size: 150%;
+    margin-left: 40%;
 }
 
 .input-lg {
@@ -128,32 +110,6 @@
 .texte_require {
     color: grey;
     font-size: 130%;
-}
-
-@media screen and (max-width:1600px ) {
-    /* titre H3 du formulaire */
-    .accrocheForm {
-        font-weight: bold;
-        text-align: center;
-        padding-top: 5%;
-        font-family: 'santorregular','DIN';
-        font-size: 200%;
-        width:200%;
-        color: #EE6616;
-    }
-}
-
-@media screen and (max-width:1500px ) {
-    /* titre H3 du formulaire */
-    .accrocheForm {
-        font-weight: bold;
-        text-align: center;
-        padding-top: 5%;
-        font-family: 'santorregular','DIN';
-        font-size: 180%;
-        width:200%;
-        color: #EE6616;
-    }
 }
 
 @media screen and (max-width:1300px ) {
@@ -173,16 +129,6 @@
         position: relative;
         left:40%;
         margin-top: 10%;
-    }
-    /* titre H3 du formulaire */
-    .accrocheForm {
-        font-weight: bold;
-        text-align: center;
-        padding-top: 5%;
-        font-family: 'santorregular','DIN';
-        font-size: 160%;
-        width:200%;
-        color: #EE6616;
     }
 
     .btn{
@@ -222,14 +168,6 @@
         margin-top: 0 ;
     }
 
-
-    /* titre H3 du formulaire */
-    .accrocheForm {
-        width: 100%;
-        font-family: 'santorregular','DIN';
-        font-size: 220%;
-    }
-
     .btn{
         margin-left: 0%;
         background-color: #EE6616;
@@ -241,8 +179,6 @@
         padding-bottom: 2%;
         margin-top: -2%;
         margin-bottom: -2%;
-        /*padding-top: 2%;*/
-        /*padding-bottom: 2%;*/
         height: 50%;
     }
 
@@ -300,5 +236,11 @@
         font-size: 150%;
         padding-bottom: 2%;
         height: 20%;
+    }
+
+    .btn{
+        margin-left: -10%;
+        background-color: #EE6616;
+        font-size: 150%;
     }
 }
