accents majuscules, margin actu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/notre_philosophie.html.twig
@@ -21,7 +21,7 @@
                         col-md-offset-5
                         col-lg-7
                         col-lg-offset-5 titre_trois_points">
-                        <h3 class="titrePoint">Etablir un lien</h3>
+                        <h3 class="titrePoint">&Eacutetablir un lien</h3>
                     </div>
 
                     <!-- image -->
