Added link on logo wild in footer & footer actu

--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footerActu.html.twig
@@ -92,7 +92,7 @@
 
             <div class=" col-xs-4 col-xs-offset-2">
                 <p>Réalisé par :<br/></p>
-                <img class="logo_wild2" src="{{ asset('image/logo_blanc_pastille.png') }}"><br>
+                <a href="http://www.wildcodeschool.fr/"><img class="logo_wild" src="{{ asset('image/logo_blanc_pastille.png') }}"><br></a>
                 <a class="lienFooter" href="http://www.wildcodeschool.fr/" target="_blank">Wild Code School</a>
             </div>
         </div>
