--- a/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/footer.html.twig
@@ -1,7 +1,7 @@
 <footer id="background">
     <div class="container-fluid footer">
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 block_foot">
                 <!-- Button modal Crédit -->
                 <a class="lienFooter" href="#myModal1" data-toggle="modal" data-target="#myModal1">Crédits</a><br/>
                 <!-- Modal Crédit-->
