Changed on form

--- a/m-tourisme/src/AdminBundle/Resources/views/Default/email.html.twig
+++ b/m-tourisme/src/AdminBundle/Resources/views/Default/email.html.twig
@@ -25,7 +25,7 @@ FORMULAIRE
                     message" rows="10" required></textarea><br/>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-warning catForm" class="lien_submit">Envoyer</button>
+            <button name="submit" type="submit" class="btn btn-warning catForm" class="lien_submit">Envoyer</button>
         </div>
     </form>
 
