--- a/m-tourisme/web/css/stylesheetSectionImage.css
+++ b/m-tourisme/web/css/stylesheetSectionImage.css
@@ -45,3 +45,32 @@
 	padding-right: 0px;
 	padding-left: 0px;
 }
+
+/*Suppression image fixe pour iphone et ipad*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)  {
+	.sectionImage {
+		background-attachment: scroll;
+	}
+}
+
+/*Suppression image fixe pour Retina*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 2) {
+	.sectionImage {
+		background-attachment: scroll;
+	}
+}
+
+/*Suppression image fixe pour ipad 1&2*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 1){
+	.sectionImage {
+		background-attachment: scroll;
+	}
+}
