--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -29,8 +29,6 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
-
-                            {# <h2 class="titreActu">Actualité n° {{ actu.id }}</h2> #}
                             <p class="contenu">{{ actu.contenu | raw}}</p><br/>
                         <a class="lightbox" href="#goofy"><img src="{{ asset('upload/' ~ actu.image) }}" class="img-responsive
                             img-actu"></a><br/>
@@ -39,11 +37,15 @@
                             <a class="lightbox-close" href="#"></a>
                         </div>
                             <p class="date">Le  {{ actu.date | date("d-m-Y") }}</p><br/>
-
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-6">
+                        <p class="backAcceuil">
+                            <a href=" {{ path('accueil') }}">Retourner au site</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-6">
                         <p class="back">
                             <a href=" {{ path('liste_actu') }}">Retourner à la liste d'actualités</a>
                         </p>
