--- a/m-tourisme/web/css/stylesheetOneActu.css
+++ b/m-tourisme/web/css/stylesheetOneActu.css
@@ -58,19 +58,14 @@ a.link:visited {
     text-align: left;
 }
 
+.backAcceuil {
+    text-align: right;
+}
+
 .img-actu {
     width: 35%;
     margin-left: 32%;
 }
-
-/*.img-actu:active {
-    transform: scale(3);
-    z-index: 1000;
-    border: solid 1px #EE6616;
-    border-radius: 3px;
-    box-shadow: 5px 5px 10px black;
-    transition-duration: 1s;
-}*/
 
 hr {
     color: #EE6616;
