--- a/m-tourisme/web/css/headerAdminStyle.css
+++ b/m-tourisme/web/css/headerAdminStyle.css
@@ -9,6 +9,36 @@ Header {
     color: white;
 }
 
+/*Suppression image fixe pour iphone et ipad*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)  {
+    Header {
+        background-attachment: scroll;
+    }
+}
+
+/*Suppression image fixe pour Retina*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 2) {
+    Header {
+        background-attachment: scroll;
+    }
+}
+
+/*Suppression image fixe pour ipad 1&2*/
+@media only screen
+and (min-device-width : 768px)
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 1){
+    Header {
+        background-attachment: scroll;
+    }
+}
+
+
 .row {
     margin-right: 0px;
 }
