--- a/m-tourisme/web/css/stylesheetForm.css
+++ b/m-tourisme/web/css/stylesheetForm.css
@@ -237,6 +237,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         padding-bottom: 2%;
         height: 30%;
     }
+}
 
 @media screen and (max-width:800px ) {
     .logolabo {
@@ -252,8 +253,9 @@ and (-webkit-min-device-pixel-ratio: 1){
         padding-bottom: 2%;
         height: 20%;
     }
+}
 
-@media screen and (max-width:700px ) {
+@media screen and (max-width: 700px ) {
     .logolabo {
         width: 20%;
         height: 20%;
@@ -268,7 +270,7 @@ and (-webkit-min-device-pixel-ratio: 1){
         height: 20%;
     }
 
-    .btn{
+    .btn {
         margin-left: -7%;
         background-color: #EE6616;
         font-size: 150%;
