--- a/m-tourisme/web/css/stylesheetFooter.css
+++ b/m-tourisme/web/css/stylesheetFooter.css
@@ -64,6 +64,15 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 }
 
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+    #background {
+        background-attachment: scroll;
+    }
+}
+
 
 .modal-body {
     color: #0f0f0f;
