--- a/m-tourisme/web/css/stylesheetForm.css
+++ b/m-tourisme/web/css/stylesheetForm.css
@@ -38,6 +38,15 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 }
 
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+    .sectionForm {
+        background-attachment: scroll;
+    }
+}
+
 
 .leftSide {
     text-align: center;
