--- a/m-tourisme/web/css/stylesheetOneActu.css
+++ b/m-tourisme/web/css/stylesheetOneActu.css
@@ -34,6 +34,15 @@ and (-webkit-min-device-pixel-ratio: 1){
     }
 }
 
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+    .body {
+        background-attachment: scroll;
+    }
+}
+
 .row {
     margin-right: 0px;
 }
