--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -54,3 +54,12 @@ and (-webkit-min-device-pixel-ratio: 1){
         background-attachment: scroll;
     }
 }
+
+@media only screen
+and (min-device-width: 320px)
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2) {
+    .sectionImage1 {
+        background-attachment: scroll;
+    }
+}
