update section image

--- a/m-tourisme/web/css/stylesheetSectionImage.css
+++ b/m-tourisme/web/css/stylesheetSectionImage.css
@@ -53,6 +53,9 @@ and (max-device-width : 1024px)  {
 	.sectionImage {
 		background-attachment: scroll;
 	}
+	.textImage1 {
+		font-size: 100%;
+	}
 }
 
 /*Suppression image fixe pour Retina*/
