--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -33,6 +33,9 @@ and (max-device-width : 1024px)  {
     .sectionImage1 {
         background-attachment: scroll;
     }
+    .textImage1 {
+        font-size: 100%;
+    }
 }
 
 /*Suppression image fixe pour Retina*/
