--- a/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/index.html.twig
@@ -85,7 +85,7 @@
                         <img alt="Facebook MTourismeLudique" src=" {{ asset('image/logo_FB_transp.png') }}"/>
                     </a>
 
-                    <div class="fb-page" data-href="https://www.facebook.com/mtourismeludique"
+                    <div class="fb-page hidden-xs hidden-sm" data-href="https://www.facebook.com/mtourismeludique"
                          data-tabs="timeline"
                          data-small-header="true"
                          data-adapt-container-width="true"
@@ -99,7 +99,6 @@
                             <iframe class="box_FB" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fmtourismeludique&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId"
                                     width="340"
                                     height="500">
-                                <!-- style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"-->
                             </iframe>
                         </div>
                     </div>
@@ -123,7 +122,6 @@
 
             <!--- Bouton haut de page --->
             <ul id="logo_home">
-
                 <li>
                     <a href="#" id="home" class="go_top">
                         <span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span>
