--- a/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage1.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/sectionImage1.html.twig
@@ -1,6 +1,6 @@
 
 <div class="container-fluid">
-    <div class="hidden-xs hidden-sm sectionImage1">
+    <div class="sectionImage1">
         <div class="row">
             <div class="col-xs-offset-1 col-xs-4">
                 <img class="guillemets1" src="{{ asset ('image/guillemets up.png')}}" alt="guillemets">
