--- a/m-tourisme/web/css/stylesheetProduits.css
+++ b/m-tourisme/web/css/stylesheetProduits.css
@@ -4,7 +4,7 @@ video {
 
 .embed-responsive {
     margin: 0 auto;
-    width: 100px;
+    width: 100%;
 }
 
 .txtGeo {
@@ -49,7 +49,7 @@ video {
 
 .citation {
     font-style: italic;
-    font-size: 150%;
+    font-size: 100%;
 }
 
 .citationLeft {
