--- a/m-tourisme/web/css/stylesheetSectionImage1.css
+++ b/m-tourisme/web/css/stylesheetSectionImage1.css
@@ -34,7 +34,7 @@ and (max-device-width : 1024px)  {
         background-attachment: scroll;
     }
     .textImage1 {
-        font-size: 100%;
+        font-size: 200%;
     }
 }
 
@@ -66,6 +66,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .sectionImage1 {
         background-attachment: scroll;
     }
+    .textImage1 {
+        font-size: 200%;
+    }
 }
 
 /*Iphone 5 et 5S */
@@ -75,6 +78,9 @@ and (max-device-width: 568px)
 and (-webkit-min-device-pixel-ratio: 2) {
     .sectionImage1 {
         background-attachment: scroll;
+    }
+    .textImage1 {
+        font-size: 200%;
     }
 }
 
@@ -86,6 +92,9 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .sectionImage1 {
         background-attachment: scroll;
     }
+    .textImage1 {
+        font-size: 200%;
+    }
 }
 
 /* Iphone 6+ */
@@ -96,6 +105,9 @@ and (-webkit-min-device-pixel-ratio: 3) {
     .sectionImage1 {
         background-attachment: scroll;
     }
+    .textImage1 {
+        font-size: 200%;
+    }
 }
 
 /* Portrait and Landscape */
@@ -105,5 +117,8 @@ and (max-device-width: 568px)
 and (-webkit-min-device-pixel-ratio: 2) {
     .sectionImage1 {
         background-attachment: scroll;
+    }
+    .textImage1 {
+        font-size: 200%;
     }
 }
