--- a/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/listeActu.html.twig
@@ -36,16 +36,18 @@
                             <a href="{{ path('afficher_actu', {'id': actu.id}) }}"><img src="{{ asset('upload/' ~ actu.image) }}"
                                                                                         class="img-responsive img-actu"></a><br/>
                             <a href="{{ path('afficher_actu', {'id': actu.id}) }}">En lire plus...</a><br/>
-                            <p class="date">Le {{ actu.date | date("d-m-Y") }}</p><br/>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <p class="backHome">
+                                        <a href="index">Retourner à la page d'accueil</a>
+                                    </p>
+                                </div>
+                                <div class="col-lg-6">
+                                    <p class="date">Le {{ actu.date | date("d-m-Y") }}</p><br/>
+                                </div>
+                            </div>
                             <hr class="separation">
                         {% endfor %}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-12">
-                        <p class="back">
-                            <a href="index">Retourner au site</a>
-                        </p>
                     </div>
                 </div>
             </div>
