--- a/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
+++ b/m-tourisme/src/MTLBundle/Resources/views/Default/oneActu.html.twig
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-lg-6">
                         <p class="back">
-                            <a href=" {{ path('liste_actu') }}">Retourner à la liste d'actualités</a>
+                            <a href=" {{ path('liste_actu') ~ '#' ~ actu.id }}">Retourner à la liste d'actualités</a>
                         </p>
                     </div>
                 </div>
